Alignment issue for contact Number fixed

--- a/ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
@@ -1188,13 +1188,17 @@
     svg {
       position: absolute!important;
       top: 1rem!important;
-      right: 1.8rem!important;
+      right: -2rem!important;
+      
+      @include respond-to-min($desktop) {
+        right: 1.8rem!important;
+        }
     }
   }
   input[type="tel"]:not(.browser-default) {
-    width: 20.5rem;
+    width: 19.5rem!important;
     @include respond-to-min($tablet) {
-      width: 20.5rem;
+      width: 18rem!important;
     }
     @include respond-to-min($desktop) {
       width: 30.8rem !important;
